# unimem

./: .gitignore  CLAUDE.md  Cargo.toml
benches/: alloc.rs  bandwidth.rs
docs/: explanation.md
examples/: ane_matmul.rs  pipeline.rs
experiments/dext_contiguous_alloc/: README.md  build_client.sh  build_dext.sh  run.sh
experiments/dext_contiguous_alloc/client/: Cargo.toml
experiments/dext_contiguous_alloc/client/src/: main.rs
experiments/dext_contiguous_alloc/dext/: CybMemAllocDriver.cpp  CybMemAllocDriver.entitlements  CybMemAllocDriver.iig  Info.plist
experiments/dext_iosurface_pa/: README.md  build_client.sh  build_dext.sh  create_xcode_project.sh  run.sh
experiments/dext_iosurface_pa/CybMemDriver.xcodeproj/: project.pbxproj
experiments/dext_iosurface_pa/client/: Cargo.toml
experiments/dext_iosurface_pa/client/src/: main.rs
experiments/dext_iosurface_pa/dext/: CybMemDriver.cpp  CybMemDriver.entitlements  CybMemDriver.iig  Info.plist
experiments/hyp_probe/: Cargo.toml  build.sh
experiments/hyp_probe/src/: main.rs
experiments/iosurface_probe/: Cargo.toml
experiments/iosurface_probe/src/: main.rs
specs/: AUDIT-v0.md  AUDIT.md  README.md  api-sketch.md
src/: block.rs  ffi.rs  grid.rs  layout.rs  lib.rs  tape.rs
tests/: roundtrip.rs
