[package]
name = "unimem"
version = "0.1.0"
edition = "2021"
description = "Zero-copy memory driver for Apple Silicon — IOSurface + bump arena + tensor pool"
license = "MIT"
repository = "https://github.com/cyberia-to/unimem"
keywords = ["apple-silicon", "iosurface", "zero-copy", "arena", "memory"]
categories = ["os::macos-apis", "hardware-support", "memory-management"]

[dependencies]
crossbeam-queue = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"
rane = { path = "../rane" }
aruminium = { path = "../aruminium" }
acpu = { path = "../acpu" }

[[example]]
name = "ane_matmul"

[[example]]
name = "pipeline"

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "bandwidth"
harness = false
